AI-JADEDEVS4/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>Job Function based on title</description>
        <inlineHelpText>Job function based on title</inlineHelpText>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Features_Needed__c</fullName>
        <label>Key Features Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Icelandic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_MinusEloqua__c</fullName>
        <label>Last Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Partner Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Activity__c</fullName>
        <label>Last Modified Date Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Offer_Most_Recent__c</fullName>
        <label>Lead Offer - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - NetSuite Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Demo Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials NetSuite Module Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Online Module Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Webinar Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP BPK Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP CPM Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Customer Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Discovery Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Enterprise Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Hosted Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Live Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Partner Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Consolidation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Discovery Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Prospect Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Resource Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Survival Kit Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software WP - Top 10 Financial Management Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software WP - Top 15 Accounting Software Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Offer_Original__c</fullName>
        <label>Lead Offer Original</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - NetSuite Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Demo Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials NetSuite Module Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Online Module Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Webinar Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP BPK Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Customer Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Discovery Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Enterprise Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express - Hosted Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Live Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Consolidation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Discovery Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Prospect Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Resource Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Survival Kit Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article – CFO Get IT Right Or Get Left Behind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study - DHL Global Forwarding Ireland automates budgeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study – Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Kit - 2007</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Historical_High_Date__c</fullName>
        <description>Date of the lead score historical High</description>
        <inlineHelpText>Date of the lead score historical High</inlineHelpText>
        <label>Lead Score Historical High Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Historical_High__c</fullName>
        <label>Lead Score Historical High</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <label>Lead Source - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Live 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caperra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloqua Engagement Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Accounting Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Generated List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Industry List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner - Prospect Referral Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-DM|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-IN|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-LM|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-TD|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-TS|Adaptive Insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar - Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Vendor__c</fullName>
        <label>Lead Vendor</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Stage__c</fullName>
        <inlineHelpText>Marketing Accepted Lead (MAL) 
Marketing Qualified Lead (MQL) 
Sales Accepted Lead (SAL) 
Sales Qualified Lead (SQL) 
Customer</inlineHelpText>
        <label>Lifecycle</label>
        <picklist>
            <picklistValues>
                <fullName>MAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Events_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Events Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDF_Approval_Number__c</fullName>
        <label>MDF Approval Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Sourced_Lead__c</fullName>
        <label>MDF Sourced Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_List_Type__c</fullName>
        <label>Mailing List Type</label>
        <picklist>
            <picklistValues>
                <fullName>System Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Cards</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Missing_Feature_Detail__c</fullName>
        <label>Missing Feature Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Feature__c</fullName>
        <description>Enter specific details to the missing key features of our product.</description>
        <inlineHelpText>Enter specific details to the missing key features of our product.</inlineHelpText>
        <label>Missing Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Sites__c</fullName>
        <label>Multiple Sites Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Products_and_Enhancements_Subscript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New Products and Enhancements Subscriptions</description>
        <label>New Products and Enhancements Subscript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>This is Lead Notes from lead conversion</description>
        <inlineHelpText>This is Lead Notes from lead conversion</inlineHelpText>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_CRM__c</fullName>
        <label>Other CRM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_ERP__c</fullName>
        <label>Other ERP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_HR__c</fullName>
        <label>Other HR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>Owner.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <formula>Owner.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <formula>Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <formula>Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_s_Email__c</fullName>
        <description>Populated the record owner&apos;s manager&apos;s email address with a workflow for sending notifications</description>
        <label>Owner&apos;s Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRM_Admin_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PRM Admin Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Automatically populates with link to Partner Account (Account associated with Partner Contact)</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Partner_Contact__r.AccountId, Partner_Contact__r.Account.Name)</formula>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Certification_Date__c</fullName>
        <label>Partner Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Partner Contact who submitted the Lead this Contact was converted from.</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Newsletter_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Newsletter Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Owner__c</fullName>
        <formula>$User.ContactId = Partner_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Super_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this contact is related to a user that is a super user.</description>
        <label>Partner Super User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <inlineHelpText>GSI(Global System Integrator) 
ISV(Independent Software Vendor) 
BPO(Business process outsourcing)</inlineHelpText>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>GSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Webinars_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Webinars Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Personnel_Planning__c</fullName>
        <label>Personnel Planning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Notes__c</fullName>
        <label>Phone Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Name__c</fullName>
        <label>Community User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User_Profile__c</fullName>
        <label>Partner Community User Profile</label>
        <picklist>
            <controllingField>Create_Portal_User__c</controllingField>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Contact Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchasing_Role__c</fullName>
        <description>Role person plays in purchase decision</description>
        <inlineHelpText>Role person plays in purchase decision.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Not_a_Fit__c</fullName>
        <label>Reason Not a  Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unserved Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Bounce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Solution_Not_a_Fit__c</fullName>
        <label>Reason Solution Not a Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unserved Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_change_Pain_Points__c</fullName>
        <label>Reason for change/Pain Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Company__c</fullName>
        <label>Referral Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <label>Referral Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_First_Name__c</fullName>
        <label>Referral First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Last_Name__c</fullName>
        <label>Referral Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Notes__c</fullName>
        <inlineHelpText>Torchbearers Referral Notes (map from Additional Notes in Eloqua) &amp; Referral Notes on Leads from lead conversion</inlineHelpText>
        <label>Referral Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <formula>IF(OR(CreatedBy.ProfileId = &apos;00e61000000ZAvj&apos;, 
CreatedBy.ProfileId = &apos;00e61000000ZAve&apos;, 
CreatedBy.ProfileId = &apos;00e61000000ZAvZ&apos;), CreatedDate , NULL )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>